Made corrections as per the feedback
Removed the animate css CDN file from the todo.html file as well as the class name"animate__animated"

Corrected the indentation on the JS file

Made sure that all commits have the correct description

Got rid of white spaces when adding items ... you can no longer as blank items.

Variables have been changed to Let & Const . Var is present but not when inside a function

Made sure there is a break at the within the while loop .

Corrected naming conventions .

--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@ body,html {
   position: relative;
 }
 
-#errorMsg {
-  color: #fff;
-}
 
 /* Remove margins and padding from the list */
 ul {
@@ -119,7 +116,7 @@ input {
 }
 
 /* Style the "Add" button */
-.Btn {
+.btn {
   margin-left: 5px;
   padding: 10px;
   width: 8%;
@@ -135,14 +132,14 @@ input {
   border: solid white;
 }
 
-.Btn:hover {
+.btn:hover {
   background-color: rgba(125, 125, 125, 0.8);
   color: #fff;
 }
 
 
 /* Delete all stytling */
-.BtnDelete {
+.btnDelete {
   height: 22%;
   width: 8%;
   cursor: pointer;
@@ -153,13 +150,13 @@ input {
   margin-left: 4px;  
 }
 
-.BtnDelete:hover {
+.btnDelete:hover {
   background-color: rgba(125, 125, 125, 0.8);
   color: #fff;
 }
 
   /* Sort styling button */
-.sortLst {
+.sortList {
   height: 22%;
   width: 8%;
   cursor: pointer;
@@ -170,12 +167,12 @@ input {
   /* margin-left: 4px;  */ 
 }
 
-.sortLst:hover {
+.sortList:hover {
   background-color: rgba(125, 125, 125, 0.8);
   color: #fff;
 }
 
-.editLst {
+.editList {
   height: 22%;
   width: 8%;
   cursor: pointer;
@@ -186,7 +183,7 @@ input {
   /* margin-left: 4px;  */ 
 }
 
-.editLst:hover {
+.editList:hover {
   background-color: rgba(125, 125, 125, 0.8);
   color: #fff;
 }
@@ -205,7 +202,6 @@ input {
   background-color: rgba(125, 125, 125, 0.8);
   color: #fff;
 }
-
 
 
 [contenteditable]:focus {
